Matched loader height with submit button to avoid height flicker

--- a/src/units/commissionOptionPicker/components/imageCarouselCoinflip.component.css
+++ b/src/units/commissionOptionPicker/components/imageCarouselCoinflip.component.css
@@ -72,7 +72,9 @@
 }
 
 .option-display-container
-.front, .back {
+.front,
+.option-display-container
+.back {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -84,7 +86,7 @@
 
 .option-display-container
 .front{
-  z-index: 2;
+  z-index: 1;
 	transform: rotateY(0deg);
 }
 
