--- a/src/units/form/components/inquiryForm.component.css
+++ b/src/units/form/components/inquiryForm.component.css
@@ -1,10 +1,66 @@
+/* I'm so sorry.... one day I'll refactor this... */
+
+.inquiry-form-container {
+  perspective: 1000px;
+}
+
+.inquiry-form-container
+.card-front,
+.inquiry-form-container
+.card-back {
+  backface-visibility: hidden;
+}
+
+.inquiry-form-container
+.card-front{
+  z-index: 1;
+	transform: rotateY(0deg);
+}
+
+.inquiry-form-container
+.card-back{
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-align: center;
+
+  transform: rotateY(180deg);
+}
+
+@-webkit-keyframes flip-right {
+  0% { transform: rotateY(0deg) }
+  33% { transform: rotateY(190deg) }
+  66% { transform: rotateY(175deg) }
+  100% { transform: rotateY(179deg) }
+}
+@keyframes flip-right {
+  0% { transform: rotateY(0deg) }
+  33% { transform: rotateY(190deg) }
+  66% { transform: rotateY(175deg) }
+  100% { transform: rotateY(179deg) }
+}
+
+.inquiry-form-container
+.animate-flip-right {
+  position: relative;
+
+  animation-name: flip-right;
+  transform-style: preserve-3d;
+  animation-duration: 0.75s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease;
+}
+
 .form-container {
   width: 70%;
   max-width: 500px;
   position: relative;
   margin: 0 auto;
-  padding: 20px 40px 40px 40px;
 
+  padding: 20px 40px 40px 40px;
   box-shadow: 0px 10px 20px rgba(0,0,0,0.16);
 }
 
@@ -15,40 +71,48 @@
   }
 }
 
-.form-container p {
-  margin-bottom: 0;
-  margin-left: 0;
-}
-
 @media only screen and (min-width: 750px) {
   .form-container p {
     margin-left: 10px;
   }
 }
 
-.form-container p:nth-child(1) {
+.header {
   font-size: 24px;
   color: #95989A;
-  margin-top: 20px;
+  margin: 20px 0 0 0;
 }
 
-.form-container p:nth-child(2) {
+.back-header {
+  margin: 0 0 30px 0;
+}
+
+.subheader {
   font-size: 12px;
   color: #95989A;
-  margin-top: 5px;
+  margin: 5px 0 0 0;
 }
 
-.form-container p:nth-child(3) {
+.front-information {
   font-size: 17px;
   color: #BEBFBF;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin: 30px 0 30px 0;
   width: 400px;
   max-width: 100%;
 }
 
+.back-information {
+  font-size: 17px;
+  color: #BEBFBF;
+  margin: 0;
+}
+
 @media only screen and (min-width: 750px) {
-  .form-container p:nth-child(3) {
+  .front-information {
+    font-size: 20px;
+  }
+
+  .back-information {
     font-size: 20px;
   }
 }
@@ -160,7 +224,6 @@ input[type=submit]:hover {
   border: 1px solid red !important;
 }
 
-/* TODO Make for desktop */
 .loader {
     border: 5px solid #f3f3f3; /* Light grey */
     border-top: 5px solid #555; /* Dark grey */
@@ -170,10 +233,22 @@ input[type=submit]:hover {
     animation: spin 1s infinite;
     animation-timing-function: cubic-bezier(.71,.12,.31,.84);
     margin: 0 auto;
-    margin-top: 15px;
+    margin-top: 5px;
+}
+
+@media only screen and (min-width: 750px) {
+  .loader {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+.email-sent-image {
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
